added unified api for connetcions and profile detail api
